fix: do not use a distinct color for visited
Many well-known sites do not use a distinct color for visited anymore.
The main problem for fx with it is that purple doesn't look nice on a
dark background. Also, I think in the context of blogging it is probably
noise. The information is in the text and brightly colored visit
information is a distraction.

--- a/fx/src/static/style.css
+++ b/fx/src/static/style.css
@@ -16,7 +16,6 @@
     --border: hsl(0, 0%, 60%);
     --header: hsl(212, 90%, 18%);
     --accent: hsl(212, 91%, 60%);
-    --visited: hsl(270, 60%, 60%);
     --blue-gradient: linear-gradient(to right, var(--dark-blue), var(--blue));
 }
 
@@ -30,7 +29,6 @@
         --text: hsl(0, 0%, 96%);
         --header: hsl(0, 0%, 96%);
         --accent: hsl(212, 91%, 65%);
-        --visited: hsl(270, 60%, 70%);
         --blue-gradient: linear-gradient(to right, var(--black), var(--dark-blue));
     }
 }
@@ -72,7 +70,7 @@ a {
 }
 
 a:visited {
-    color: var(--visited);
+    color: var(--accent);
 }
 
 a.url {
